@@ -1,5 +1,11 @@
 2012-01-30 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
+	* src/z80/ralloc2.cc,
+	  support/regression/tests/bug3482146.c:
+	  Fixed bug #3482146.
+
+2012-01-31 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
 	* support/regression/tests/bug3482146.c:
 	  Regression test for bug #3482146.
 
